# KusShoes

./: .cursorrules  .gitattributes  .gitignore  AI_AGENT_SETUP_INSTRUCTIONS.md  LOCAL_SETUP_GUIDE.md  PRODUCTION_ROADMAP.md  README.md  SETUP_CLOUD_SERVICES.md  UNIFIED_DEPLOYMENT_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  walkthrough.md
BE/: .dockerignore  .env.example  .env.production.example  ADMIN_FE_SYNC_REQUIREMENTS.md  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
BE/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  metrics.py  types.py
BE/app/infrastructure/: __init__.py  editor_worker.py  email_sender.py  google_oauth.py  otp_store.py  polar_client.py  rate_limiter.py  recovery_store.py  storage.py  task_queue.py
BE/app/models/: __init__.py  audit_log.py  bake_job.py  base.py  design_revision.py  export_record.py  invoice.py  monthly_usage.py  plan.py  project.py  project_asset.py  refresh_token.py  subscription.py  user.py
BE/app/routers/: auth.py  (+14 more)
BE/migrations/: env.py
BE/scripts/: create_admin.py  refactor_repos.py  seed_users.py  update_admin_ops.py  update_routers.py  update_service.py
BE/tests/: conftest.py  test_account_security.py  test_admin.py  test_architecture.py  test_assets.py  test_auth.py  test_billing.py  test_projects.py  test_user_p0.py  test_users.py
BE/unit_tests/: conftest.py  test_asset_validation.py  test_bake_contract.py  test_editor_contract.py  test_editor_launch.py  test_editor_worker_contract.py
(+208 files in other folders)
