[project]
name = "kusshoes-be"
version = "0.1.0"
description = "KusShoes Platform Backend API"
requires-python = ">=3.12"

dependencies = [
    # Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Auth
    "authlib>=1.3.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "email-validator>=2.0.0",

    # Config
    "pydantic-settings>=2.0.0",

    # Queue
    "celery>=5.4.0",
    "redis>=5.0.0",

    # Storage
    "boto3>=1.34.0",

    # Email
    "resend>=2.0.0",

    # Billing
    "polar-sdk>=0.20.0",

    # Logging
    "loguru>=0.7.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = [
    "APP_ENV=test",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
